# Projekt_AiZO2

./: CMakeLists.txt
Algorithms/: BellmanFord.cpp  BellmanFord.h  Dijkstra.cpp  Dijkstra.h  Kruskal.cpp  Kruskal.h  Prim.cpp  Prim.h
Main/: Main.cpp  Menu.cpp  Menu.h
Structures/: AdjacencyList.cpp  AdjacencyList.h  IncidenceMatrix.cpp  IncidenceMatrix.h  MinHeap.cpp  MinHeap.h
Submenu/: SimulationSolving.cpp  SimulationSolving.h  TestSolving.cpp  TestSolving.h
Utils/: FillStructure.cpp  FillStructure.h
